--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,16 @@
+.header-wrapper {
+  background-color: white;
+  padding: 5px 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+}
+
 .chats-body {
-  padding: 0;
+  padding: 10px 0 0 0;
+  padding-top: 100px;
 }
 
 .chats-body .header,
@@ -7,9 +18,9 @@
   padding: 0px 20px;
 }
 
-.chat-screen {
+.chats-body {
   background-image: url("../images/chatbg.png");
-  min-height: 100vh;
+  min-height: 110vh;
 }
 
 .chat-screen .chat__messages {
@@ -40,6 +51,7 @@
 }
 
 .message .message__bubble {
+  display: block;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
     rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
@@ -75,44 +87,68 @@
 }
 
 .incoming-message .message__author {
-  margin-top: 25px;
+  margin-top: 10px;
   display: block;
   font-weight: 600;
   font-size: 15px;
 }
 
-.chat__write {
+.chat__write--container {
   position: fixed;
-  bottom: 50px;
+  width: 100%;
+  bottom: 0px;
   margin: 0 auto;
   left: 0;
   right: 0;
-  width: 80%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #fcfcfc;
-  padding: 0px 20px;
+}
+
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+
+.chat__write {
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+  padding: 20px 60px;
+  margin: 0 auto;
+  width: 100%;
+  border: none;
+  font-size: 14px;
+  transition: width 0.5s ease-in, border-radius 0.5s ease-in,
+    transform 0.5s ease-in-out;
+}
+.chat__write:focus {
+  outline: none;
+  width: 80%;
+  transform: translateY(-50px);
   border-radius: 40px;
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
-.chat__write i {
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
+}
+
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.chat__write:focus .chat__write i {
   font-size: 22px;
 }
 
 .chat__write-column:nth-child(2) {
   width: 80%;
-}
-
-.chat__write-column input {
-  padding: 20px 10px;
-  width: 100%;
-  border: none;
-  font-size: 14px;
-}
-
-.chat__write-column input:focus {
-  outline: none;
 }
