--- a/css/chat.css
+++ b/css/chat.css
@@ -2,6 +2,7 @@
   background-color: white;
   padding: 5px 0px;
   position: fixed;
+  z-index: 2; /*메세지가 헤더 위에 떠있지 않도록*/
   top: 0px;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
@@ -80,10 +81,23 @@
   align-self: flex-end;
 }
 
+@keyframes spin {
+  from {
+    transform: none;
+  }
+
+  to {
+    transform: rotateY(1turn);
+  }
+}
+
 .incoming-message img {
   width: 30px;
   border-radius: 15px;
   margin-right: 15px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  animation: spin 1s linear infinite;
 }
 
 .incoming-message .message__author {
