--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import "more.css";
 @import "settings.css";
 @import "chat.css";
+@import "mobile.css";
 
 * {
   box-sizing: border-box;
@@ -25,4 +26,20 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+main {
+  animation: fadeIn 0.5s ease-in-out;
 }
